--- a/docker-composeのコピー.yml
+++ b/docker-composeのコピー.yml
@@ -9,11 +9,5 @@ services:
       - ./work:/work
     ports:
       - "8889:8888"
-    command: >
-      jupyter-lab 
-      --ip 0.0.0.0 
-      --allow-root 
-      --no-browser
-      --NotebookApp.token='' 
-      --NotebookApp.password=''
-      -b localhost
+    command:
+      jupyter-lab --ip 0.0.0.0 --allow-root -b localhost
