fix dockerfile & delete yml copy

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ work/.env
 work/.DS_Store
 work/mobweb_key1.pem
 work/mobweb_key2.pem
+
+# Jupyter Notebook
+work/__pycache__/
+work/.ipynb_checkpoints
